parser/src/snapshots/rapidus_parser__function_decl1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: FunctionDecl(
                    "f",
                    [],
                    Node {
                        base: StatementList(
                            [],
                        ),
                        loc: Loc(line:5,column:13,pos:64),
                    },
                ),
                loc: Loc(line:1,column:8,pos:8),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
