parser/src/snapshots/rapidus_parser__function_decl2.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: FunctionDecl(
                    "f",
                    [],
                    Node {
                        base: StatementList(
                            [
                                Node {
                                    base: Return(
                                        None,
                                    ),
                                    loc: Loc(line:1,column:15,pos:15),
                                },
                            ],
                        ),
                        loc: Loc(line:1,column:15,pos:15),
                    },
                ),
                loc: Loc(line:1,column:9,pos:9),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
