parser/src/snapshots/rapidus_parser__if2.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: If(
                    Node {
                        base: BinaryOp(
                            Node {
                                base: Identifier(
                                    "x",
                                ),
                                loc: Loc(line:1,column:4,pos:4),
                            },
                            Node {
                                base: Number(
                                    2.0,
                                ),
                                loc: Loc(line:1,column:9,pos:9),
                            },
                            Le,
                        ),
                        loc: Loc(line:1,column:9,pos:9),
                    },
                    Node {
                        base: Identifier(
                            "then_stmt",
                        ),
                        loc: Loc(line:1,column:12,pos:12),
                    },
                    Node {
                        base: Nope,
                        loc: Loc(line:1,column:22,pos:22),
                    },
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
