parser/src/snapshots/rapidus_parser__member1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Member(
                    Node {
                        base: Member(
                            Node {
                                base: Identifier(
                                    "a",
                                ),
                                loc: Loc(line:1,column:0,pos:0),
                            },
                            "b",
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    "c",
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
