parser/src/snapshots/rapidus_parser__member2.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Member(
                    Node {
                        base: Identifier(
                            "console",
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    "log",
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
