parser/src/snapshots/rapidus_parser__object1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Assign(
                    Node {
                        base: Identifier(
                            "a",
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    Node {
                        base: Object(
                            [
                                Property(
                                    "x",
                                    Node {
                                        base: Number(
                                            123.0,
                                        ),
                                        loc: Loc(line:1,column:8,pos:8),
                                    },
                                ),
                                Property(
                                    "1.2",
                                    Node {
                                        base: Number(
                                            456.0,
                                        ),
                                        loc: Loc(line:1,column:18,pos:18),
                                    },
                                ),
                            ],
                        ),
                        loc: Loc(line:1,column:5,pos:5),
                    },
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
