parser/src/snapshots/rapidus_parser__return1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Return(
                    Some(
                        Node {
                            base: Number(
                                1.0,
                            ),
                            loc: Loc(line:1,column:7,pos:7),
                        },
                    ),
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
