parser/src/snapshots/rapidus_parser__simple_expr_assign1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Assign(
                    Node {
                        base: Identifier(
                            "v",
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    Node {
                        base: Number(
                            1.0,
                        ),
                        loc: Loc(line:1,column:4,pos:4),
                    },
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
